--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "eslint": "^8.42.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "prettier": "^2.8.8",
@@ -32,5 +33,13 @@
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.16",
     "typescript": "^5.1.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0"
   }
 }
